--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,7 +5,7 @@
 body {
   padding-bottom: 70px;
   color: var(--global-text-color);
-  background-color: #f8f2ee;
+  background-color: var(--global-bg-color);
 
   h1,
   h2,
